--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 			
 			<div class="landing-message">
 				<div class="navBar">
-					<div class="signIn-button">login</div>
+					<a href="http://propair.herokuapp.com/users/auth/slack" class="login-link">slack login</a>
 				</div>
 				<div class="welcome-container">
 					<span class="welcome">welcome to PROPAIR</span>
@@ -26,16 +26,9 @@
 				<input type="email" placeholder="email" class="signUp-input email"></input>
 				
 				<button class="register-button">Get Slack Invite</button>
-
-
 			</div>
 
-			<div class="login-window view">
-				<div class="close-button">x</div>
-				<input type="email" placeholder="slack username" class="signUp-input email-input"></input>
-				<input type="password" placeholder="password" class="signUp-input password-input"></input>
-				<button class="login-button">login</button>
-				<div class="first-login-message view">Check your email, follow instructions</div>
+				<div class="first-login-message view">Check your email, follow instructions ➝</div>
 			</div>
 
 
@@ -82,6 +75,7 @@
 	<div class="projects-container view">
 		<div class="navBar">
 			<div class="project-button">Create A Project</div>
+
 			<div class="profile-button">profile</div>
 			<div class="signOut-button">logout</div>
 			
@@ -112,7 +106,6 @@
 		<div class="newProject-body">
 			<div class="header">Create A New Project</div>
 			<input type="text" placeholder="clever title" class="input-title new"></input>
-			<input type="text" placeholder="slack username" class="input-creator new"></input>
 
 			<textarea class="textarea-description new">Project decription here</textarea>
 			
@@ -141,15 +134,13 @@
 
 	<div class="project-container view">
 		<div class="navBar">
+			<div class="dashboard-button">dashboard</div>
 			<div class="profile-button">profile</div>
 			<div class="signOut-button">logout</div>
 		</div>
 
 		<div id="detailed-info"></div>
 
-		<div class="slack-button">Slack Me</div>
-
-		<!-- slack messages -->
 	</div>
 
 
@@ -186,13 +177,21 @@
 		<div class="singleProject">
 			<div class="projectName">{{ title }}</div>
 			<div class="projectDescription">{{ description }}</div>
-			<div class="projectCreator">Creator: {{ creatorName }}</div>
+			<div class="projectCreator">Creator: {{ creator_name }}</div>
 			<div class="languages">Skills Needed: 
 				{{ required_skill_1 }} {{ required_skill_2 }} {{ required_skill_3 }}
 				</div>
 			<div class="deadline">Deadline {{ deadline }}</div>
 			<div class="{{ status }}"></div>
 			<button class="delete">delete</button>
+			<div class="slack-button">Slack Me</div>
+			<div class="pair-button">Pair Me</div>
+			<div class="slack-container view">
+				<textarea class="slack-message"></textarea>
+				<div class="cancel-button text">cancel</div>
+				<div class="send-button text">send</div>
+			</div>
+
 
 			<!--Feedback Info-->
 		</div>
