my projects now only shows current user's projects

--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,7 @@
 					<div class="sortBy sort">Sort By:</div>
 					<!--<div class="dueDate sort by">Due Date</div>-->
 					<div class="newest sort by">Newest</div>
+					<div class="oldest sort by view">Oldest</div>
 				</div>
 			</div>
 
