updating heroku for updated backbone routes

--- a/public/index.html
+++ b/public/index.html
@@ -198,9 +198,14 @@
 				<div class="pair-button">Pair Me</div>
 			{{/if}}
 			<div class="slack-container view">
-				<textarea class="slack-message"></textarea>
-				<div class="cancel-button text">cancel</div>
-				<div class="send-button text">send</div>
+				<div class="submit">
+					<textarea class="slack-message"></textarea>
+					<div class="cancel-button text">cancel</div>
+					<div class="send-button text">send</div>
+				</div>
+				<div id="show-messages">
+					
+				</div>
 			</div>
 
 
