html typo fixed

--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
 			<div class="deadline">Deadline {{ deadline }}</div>
 			<div class="{{ status }}"></div>
 			<button class="delete">delete</button>
-			{{#if parterner_id}}
+			{{#if partner_id}}
 				<div class="slack-button">Slack Me</div>
 			{{else}}
 				<div class="pair-button">Pair Me</div>
