updated html/css to test message router

--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
 	<script src="collections/project-collection.js"></script>
 
 	<script src="views/profile-view.js"></script>
-	<script src="views/landing-view.js"></script>
+	<script src="views/message-view.js"></script>
 	<script src="views/project-view.js"></script>
 	
 	<script src="router.js"></script>
