empty message box after successful send

--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
 			<div class="{{ status }}"></div>
 			<button class="delete">delete</button>
 			{{#if partner_id}}
-				<div class="slack-button">Slack: {{ user }}</div>
+				<div class="slack-button">Slack: {{ creator_name }}</div>
 			{{else}}
 				<div class="pair-button">Pair Me</div>
 			{{/if}}
