html/css update

--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
 					<div class="send-button text">send</div>
 				</div>
 				<div class="show-message">
-					<div class="hero">Start a Screen Hero session by typing in <em>/hero @</em>username</div>
+					<div class="hero">Start a Screen Hero session by typing in<br><em>/hero @</em>username</div>
 					<div class="single-message"></div>
 				</div>
 			</div>
