update buttons to have pointers

--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@
 	</template>
 
 	<template id="message-template">
-		<div class="user"><b>{{ user }}</b> at {{ ts }}:</div>
+		<div class="user"><b>{{ user }}</b> {{ ts }}:</div>
 		<div class="user-message">{{ text }}</div>
 	</template>
 
