removed profile button

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 		<div class="navBar">
 			<div class="project-button">Create A Project</div>
 
-			<div class="profile-button">profile</div>
+			<!--<div class="profile-button">profile</div>-->
 			<div class="signOut-button">logout</div>
 			
 		</div>
@@ -99,7 +99,7 @@
 
 	<div class="createProject-container view">
 		<div class="navBar">
-			<div class="profile-button">profile</div>
+			<!--<div class="profile-button">profile</div>-->
 			<div class="signOut-button">logout</div>
 		</div>
 
@@ -135,7 +135,7 @@
 	<div class="project-container view">
 		<div class="navBar">
 			<div class="dashboard-button">dashboard</div>
-			<div class="profile-button">profile</div>
+			<!--<div class="profile-button">profile</div>-->
 			<div class="signOut-button">logout</div>
 		</div>
 
